# TankBattle

./: CMakeLists.txt  LICENSE
proto/: game.proto
src/client/: GameClient.cpp  GameClient.h  Main.cpp  NetClient.cpp  NetClient.h  Renderer.cpp  Renderer.h
src/common/: Constants.h  Packet.h
src/server/: GameServer.cpp  GameServer.h  Main.cpp  Session.cpp  Session.h
src/server/systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  ShootingSystem.cpp  ShootingSystem.h
src/server/world/: World.h
